--- a/circle.yml
+++ b/circle.yml
@@ -29,8 +29,8 @@ dependencies:
     - go build -v
   post:
     # Setup Google Cloud
-    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update --version 118.0.0
-    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update kubectl --version 118.0.0
+    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
+    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update kubectl
     - echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/gcloud-service-key.json
     - sudo /opt/google-cloud-sdk/bin/gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
     - sudo /opt/google-cloud-sdk/bin/gcloud config set project $PROJECT_NAME
