Circle.yml fixed

--- a/circle.yml
+++ b/circle.yml
@@ -58,7 +58,7 @@ deployment:
       - sudo chown -R ubuntu:ubuntu /home/ubuntu/.kube
       - kubectl --namespace=staging patch deployment ${APP_NAME} -p '{"spec":{"template":{"spec":{"containers":[{"name":"'${APP_NAME}'","image":"'${REGISTRY}'/'${PROJECT_NAME}'/'${APP_NAME}':'$CIRCLE_SHA1'"}]}}}}'
   production:
-    tag: /v[0-9]+(\.[0-9]+)+/
+    tag: /[0-9]+(\.[0-9]+)+/
     commands:
       - docker tag ${REGISTRY}/${PROJECT_NAME}/${APP_NAME}:$CIRCLE_SHA1 ${REGISTRY}/${PROJECT_NAME}/${APP_NAME}:$CIRCLE_TAG
       - sudo /opt/google-cloud-sdk/bin/gcloud docker push ${REGISTRY}/${PROJECT_NAME}/${APP_NAME}
